--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My CV</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="body-container">
@@ -50,7 +50,7 @@
         <ul>
           <li>TUMO Labs/42 Yerevan International Coding School, (Jan 2021 - June 2022)
           </li>
-          <li>Yerevan State University, MSc & BSC in Mechanics</li>
+          <li>Yerevan State University, MSc and BSC in Mechanics</li>
         </ul>
       </div>
       <div>
