fix: fix closing tag

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
         <div class="footer-items">
           <!-- Fall, 2022 -->
-          <img src="img/2022.webp" alt="2022 logo"></a>
+          <img src="img/2022.webp" alt="2022 logo">
         </div>
         <div class="footer-items">
           <a  href="https://wearecommunity.io/events/rs-js-en-2022q3"><img src="/img/rsschool-logo.png" alt="RS School logo"></a>
