--- a/index.html
+++ b/index.html
@@ -9,57 +9,67 @@
   </head>
   <body>
     <div class="body-container">
-      <h2>Lilit Khalatyan</h2>
-      <div>
-        <h3>Contacts</h3>
-        <ul>
-          <li>Email: lkhaltyan@gmail.com</li>
-        </ul>
+      <!-- Header -->
+      <header>
+        <h1>Lilit Khalatyan</h1>
+        <img src="img/prof-picture.jpg" alt="Profile picture">
+      </header>
+      <!-- Nav -->
+      <nav>
+        <div>
+          <h2>Contacts</h2>
+          <ul>
+            <li>Email: lkhaltyan@gmail.com</li>
+          </ul>
+        </div>
+      </nav>
+      <!-- Main -->
+      <main>
+        <div>
+          <h2>Summary</h2>
+          <ul>
+            <li>One year ago I finally stepped to IT sphere - Thanks to TUMO Labs/42 Yerevan school</li>
+            <li>Enthusiastic about JavaScript and Node.js</li>
+            <li>My Goal - To become Full Stack Developer in one year</li>
+          </ul>
+        </div>
+        <div>
+          <h2>Skills</h2>
+          <ul>
+            <li>Beginner JavaScript, Node.js, CSS, HTML and C, GIT, Docker, Bash</li>
+            <li>OS: Linux, Mac OS, Windows XP</li>
+          </ul>
+        </div>
+        <div>
+          <h2> Code examples</h2>
+          <div>let num = 42;</div>
+          <div> console.log(`${num} is The Meaning of Life`);</div>
+        </div>
+        <div>
+          <h2>Experience</h2>
+          <ul>
+            <li>- I have project-based learning and teamwork experience from 42 Yerevan (all projects in C language).
+            </li>
+            <li>- Have completed JS fundamentals and Nodejs basics course.</li>
+            <li>Some tasks/projects are placed on my <a href="https://github.com/LilitKhalatyan">github account.</a></li>
+          </ul>
+        </div>
+        <div>
+          <h2>Education</h2>
+          <ul>
+            <li>TUMO Labs/42 Yerevan International Coding School, (Jan 2021 - June 2022)
+            </li>
+            <li>Yerevan State University, MSc and BSC in Mechanics</li>
+          </ul>
+        </div>
+        <div>
+          <h2>English</h2>
+          <ul>
+            <li>B2</li>
+          </ul>
+        </div>
       </div>
-      <div>
-        <h3>Summary</h3>
-        <ul>
-          <li>One year ago I finally stepped to IT sphere - Thanks to TUMO Labs/42 Yerevan school</li>
-          <li>Enthusiastic about JavaScript and Node.js</li>
-          <li>My Goal - To become Full Stack Developer in one year</li>
-        </ul>
-      </div>
-      <div>
-        <h3>Skills</h3>
-        <ul>
-          <li>Beginner JavaScript, Node.js, CSS, HTML and C, GIT, Docker, Bash</li>
-          <li>OS: Linux, Mac OS, Windows XP</li>
-        </ul>
-      </div>
-      <div>
-        <h3> Code examples</h3>
-        <div>let num = 42;</div>
-        <div> console.log(`${num} is The Meaning of Life`);</div>
-      </div>
-      <div>
-        <h3>Experience</h3>
-        <ul>
-          <li>- I have project-based learning and teamwork experience from 42 Yerevan (all projects in C language).
-          </li>
-          <li>- Have completed JS fundamentals and Nodejs basics course.</li>
-          <li>Some tasks/projects are placed on my <a href="https://github.com/LilitKhalatyan">github account.</a></li>
-        </ul>
-      </div>
-      <div>
-        <h3>Education</h3>
-        <ul>
-          <li>TUMO Labs/42 Yerevan International Coding School, (Jan 2021 - June 2022)
-          </li>
-          <li>Yerevan State University, MSc and BSC in Mechanics</li>
-        </ul>
-      </div>
-      <div>
-        <h3>English</h3>
-        <ul>
-          <li>B2</li>
-        </ul>
-      </div>
-    </div>
+    </main>
     <!-- Footer ::: start -->
     <footer>
       <div class="footer-container">
