feat: change link

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <!-- <img src="img/2022.webp" alt="2022 logo"> -->
         </div>
         <div class="footer-items">
-          <a  href="https://wearecommunity.io/events/rs-js-en-2022q3"><img src="/img/rsschool-logo.png" alt="RS School logo"></a>
+          <a  href="https://wearecommunity.io/events/rs-js-en-2022q3"><img src="https://raw.githubusercontent.com/LilitKhalatyan/rsschool-cv/gh-pages/img/rsschool-logo.p[…]vNDb86keGYsBPuQ3fZwpA_yhlNVsHz3WLU_gOkMBRkuCSLfjmVfBMzTM" alt="RS School logo"></a>
         </div>
       </div>
     </footer>
